@@ -34,6 +34,8 @@ Job: "ttH2015"
   SystCategoryTables: TRUE
 %   HideNP: SigXsecOverSM
   KeepPruning: TRUE
+%   SummaryPlotYmin: 0.1
+%   SummaryPlotYmax: 10000
   
 % --------------- %
 % ---  FIT    --- %
@@ -72,6 +74,9 @@ Region: "HThad_4j2b"
   Binning: 100,200,250,300,350,400,450,500,550,600,700,1100
   BinWidth: 50
 %   DataType: ASIMOV
+%   Ymax: 1000
+%   Ymin: 10
+%   LogScale: TRUE
   
 Region: "HThad_5j3b"
   Type: CONTROL
