@@ -1,3 +1,6 @@
+2016-12-14 Michele Pinamonti <michele.pinamonti@gmail.com>
+    * Added configurable y axis tange per region
+    
 2016-10-27 Loic Valery <lvalery@cern.ch>
     * Slight change in the setup for the automatic build in Git
     * Adding lots of Git stuff in the package (README.rst, .gitignore, ...)
